.playwright-mcp/console-2026-03-12T22-57-06-794Z.log
[    9702ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/:0
[   10016ms] Error: Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive.

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;

    at getCssError (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/parseCss.js:24:16)
    at getModuleBuildError (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/webpackModuleError.js:116:43)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/index.js:29:49)
    at async (file:///Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/plugins/wellknown-errors-plugin/index.js:27:21)
[   10002ms] [ERROR] ./src/app/globals.css:3:1
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive.

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities; @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/internal/helpers/hydration-error-info.js:62
[   10003ms] [ERROR] ./src/app/globals.css
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
-- inner error --
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
Generated code for /Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[14].oneOf[12].use[2]!/Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[14].oneOf[12].use[3]!/Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/internal/helpers/hydration-error-info.js:62
[   10285ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/favicon.ico:0
[   81552ms] [ERROR] ./src/app/globals.css:1:1
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive.

> 1 | @tailwind base;
    | ^
  2 | @tailwind components;
  3 | @tailwind utilities; @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/internal/helpers/hydration-error-info.js:62
[   81552ms] [ERROR] ./src/app/globals.css
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
-- inner error --
Syntax error: /Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
Generated code for /Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[14].oneOf[12].use[2]!/Users/dominikdudys/Dev/studentenverwaltung/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[14].oneOf[12].use[3]!/Users/dominikdudys/Dev/studentenverwaltung/src/app/globals.css

Import trace for requested module:
./src/app/globals.css @ webpack-internal:///./node_modules/next/dist/client/components/react-dev-overlay/internal/helpers/hydration-error-info.js:62
